tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/bool_modulo.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(true % false)

